<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:foregroundTint="#9C27B0"
    tools:context=".ui.activities.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="283dp"
        android:layout_height="34dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="150dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/my_text_field_hint3"
            android:text="@string/my_text_field_hint3"
            android:textColor="@color/white"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="172dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/my_text_field_hint4"
            android:rotationX="-2"
            android:text="@string/my_text_field_hint4"
            android:textColor="@color/white"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="0dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="282dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="150dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/textView12"
            android:layout_width="187dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/my_text_field_hint"
            android:text="@string/my_text_field_hint"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:visibility="visible"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="76dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/my_text_field_hint2"
            android:text="@string/my_text_field_hint2"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:visibility="visible"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/imagebutton2"
            android:layout_width="29dp"
            android:layout_height="match_parent"
            android:backgroundTint="#A2D2ED"
            app:srcCompat="@android:drawable/arrow_down_float" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView17"
        android:layout_width="101dp"
        android:layout_height="30dp"
        android:hint="@string/my_text_field_hint6"
        android:text="Ваше имя:"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="154dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/my_text_field_hint5"
        android:text="@string/my_text_field_hint5"
        android:textColor="#e3e6e8"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.331"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="102dp"
        android:layout_height="92dp"
        android:backgroundTint="#E9F4FA"
        android:contentDescription="@string/todo2"
        android:foregroundTint="#ADD7EF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943"
        app:srcCompat="@android:drawable/ic_popup_reminder"
        app:tint="#7DBDE1"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#F6FAFC"
        android:clickable="true"
        android:focusable="true"
        android:foregroundTint="#ABD6EE"
        android:tint="#A3D2ED"
        app:backgroundTint="#A3D2ED"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.939"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.907"
        app:srcCompat="@drawable/_059617" />

    <Button
        android:id="@+id/button4"
        android:layout_width="228dp"
        android:layout_height="49dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="103dp"
        android:backgroundTint="@color/purple_700"
        android:text="@string/drinks1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.582" />

    <Button
        android:id="@+id/button6"
        android:layout_width="228dp"
        android:layout_height="51dp"
        android:layout_marginTop="13dp"
        android:backgroundTint="#3700B2"
        android:text="@string/Drinks2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.004" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="Напитки:"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="150dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="2dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView17"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <ImageButton
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#A2D2ED"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044"
        app:srcCompat="@android:drawable/checkbox_on_background" />


</androidx.constraintlayout.widget.ConstraintLayout>